--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 
 ext {
+    plugin_version = "1.2"
     plugin_name = "sagex.plugin.pushbullet"
     plugin_desc = "PushBullet notifications for SageTV"
     plugin_longdesc = "Can send SageTV System Messages to your Desktop and Mobile Device.  Requires a PushBullet account."
@@ -14,7 +15,7 @@ ext {
 
 archivesBaseName = "${plugin_name}"
 group 'sagex.plugins'
-version '1.1'
+version = "${plugin_version}"
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -56,7 +57,7 @@ jar {
     manifest {
         attributes(
                 "Implementation-Title": "${plugin_name}",
-                "Implementation-Version": version
+                "Implementation-Version": "${plugin_version}"
         )
     }
 }
@@ -130,7 +131,7 @@ task packagePlugin(type: Zip, dependsOn: jar) {
     baseName "${plugin_name}"
     from "build/libs/"
     include "${plugin_name}-*.jar"
-    rename("${plugin_name}-${version}.jar","${plugin_name}.jar")
+    rename("${plugin_name}-${plugin_version}.jar","${plugin_name}.jar")
 }
 
 task packagePluginManifest << {
@@ -140,14 +141,14 @@ task packagePluginManifest << {
         into 'build/tmp/'
     }
 
-    ant.checksum (file:"build/distributions/${plugin_name}-${version}.zip", property:"md5_jar")
+    ant.checksum (file:"build/distributions/${plugin_name}-${plugin_version}.zip", property:"md5_jar")
     ant.tstamp {
         format(property:"lastmodified", pattern:"yyyy.MM.dd")
     }
 
     ant.replace(file:"build/tmp/plugin.xml", summary:"yes") {
         replacefilter(token: "@@last-modified@@", value: ant.lastmodified)
-        replacefilter(token: "@@version@@", value: version)
+        replacefilter(token: "@@version@@", value: plugin_version)
         replacefilter(token: "@@jar-checksum@@", value: ant.md5_jar)
         replacefilter(token: "@@plugin-name@@", value: plugin_name)
         replacefilter(token: "@@plugin-desc@@", value: plugin_desc)
@@ -157,7 +158,7 @@ task packagePluginManifest << {
     copy {
         from 'build/tmp/plugin.xml'
         into 'build/distributions/'
-        rename ('plugin.xml', "${plugin_name}-${version}.xml")
+        rename ('plugin.xml', "${plugin_name}-${plugin_version}.xml")
     }
 
     // update the deployed manifest
@@ -173,11 +174,11 @@ packagePluginManifest.dependsOn packagePlugin
 // use ./gradlew bintrayUpload
 bintray {
     user = System.getenv("BINTRAY_USER")
-    key = System.getenv("BINTRAY_API");
+    key = System.getenv("BINTRAY_API")
 
     filesSpec {
         from ('build/distributions/') {
-            include "*${version}*"
+            include "*${plugin_version}*"
         }
         into "${plugin_name}"
     }
@@ -195,9 +196,9 @@ bintray {
         publicDownloadNumbers = true
         //attributes= ['a': ['ay1', 'ay2'], 'b': ['bee'], c: 'cee'] //Optional package-level attributes
         version {
-            name = "${version}"
+            name = "${plugin_version}"
             desc = "${plugin_desc}"
-            vcsTag = "${version}"
+            vcsTag = "${plugin_version}"
             //attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin']
         }
     }
